--- a/gid/src/App.css
+++ b/gid/src/App.css
@@ -1,4 +1,9 @@
 
+.flex-right {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .content {
     height: 80vh;
 }
@@ -13,5 +18,33 @@
 
 .list-item {
     cursor: pointer;
-    
+}
+
+.modal-back {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    background-color: #333;
+    opacity: 0.8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.modal-front {
+    background-color: #fff;
+    min-height: 15vh;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+
+.action-text label {
+    margin: 0px;
+}
+
+.action-text input {
+    width: 100%;
 }
